# VulnerableDepsCpp

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  serialization.cpp  snyk.out
dependencies/poco/: MANIFEST  Makefile  VERSION  components
dependencies/poco/Crypto/testsuite/: CMakeLists.txt
dependencies/poco/Data/MySQL/testsuite/: CMakeLists.txt
dependencies/poco/Data/ODBC/testsuite/: CMakeLists.txt
dependencies/poco/Data/SQLite/testsuite/: CMakeLists.txt
dependencies/poco/Data/testsuite/: CMakeLists.txt
dependencies/poco/Encodings/testsuite/: CMakeLists.txt
dependencies/poco/Foundation/testsuite/: CMakeLists.txt
dependencies/poco/JSON/testsuite/: CMakeLists.txt
dependencies/poco/MongoDB/testsuite/: CMakeLists.txt
dependencies/poco/Net/testsuite/: CMakeLists.txt
dependencies/poco/NetSSL_OpenSSL/testsuite/: CMakeLists.txt
dependencies/poco/Redis/testsuite/: CMakeLists.txt
dependencies/poco/Util/testsuite/: CMakeLists.txt
dependencies/poco/XML/testsuite/: CMakeLists.txt
dependencies/poco/Zip/testsuite/: CMakeLists.txt
